Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,7 @@ stages:
       - npm 
 
   variables:
-     
-     dotnetSdkVersion: '1.0'
+    wwwrootDir: 'frontend_mothership/wwwroot'
+    dotnetSdkVersion: '1.0'
+    
+ 
