--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,7 @@ stages:
       displayName: 'Run npm install'
       inputs:
         verbose: false
+
+    - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt' 
+      displayName: 'Write build info'
+      workingDirectory: $(wwwrootDir)
