Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,10 @@ stages:
       displayName: 'Use .NET SDK $(dotnetSdkVersion)'
       inputs:
         version: '$(dotnetSdkVersion)'
-
+    - task: Npm@1
+      displayName: 'Install Dependencies'
+      inputs:
+       command: 'install'
     - task: Npm@1
       displayName: 'Run npm install'
       inputs:
