--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   buildConfiguration: 'Dev'
   releaseBranchName: 'dev'
   ariables:
-  wwwrootDir: 'frontend_mothership/wwwroot'
+  wwwrootDir: '/home/vsts/wwwroot'
   dotnetSdkVersion: '6.x'
 
 
