--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,4 +42,4 @@ stages:
 
     - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt' 
       displayName: 'Write build info'
-      workingDirectory: $(wwwrootDir)
+      #workingDirectory: $(wwwrootDir)
