--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,71 +4,42 @@
 # https://aka.ms/yaml
 
 trigger:
-- '*'
+  branches:
+    include:
+      - '*'
 
-
+pool:
+  vmImage: 'ubuntu-latest'
 variables:
   buildConfiguration: 'Dev'
   releaseBranchName: 'dev'
-  
- 
   dotnetSdkVersion: '6.x'
 
+steps:
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '6.x' # specify the .NET version you're using
 
-stages:
-- stage: 'Build'
-  displayName: 'Build the web application'
-  jobs: 
-  - job: 'Build'
-    displayName: 'Build job'
-    pool:
-      vmImage: 'ubuntu-20.04'
-      demands:
-      - npm 
-      
-    steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET SDK $(dotnetSdkVersion)'
-      inputs:
-        version: '$(dotnetSdkVersion)'
-    - task: Npm@1
-      displayName: 'Install Dependencies'
-      inputs:
-       command: 'install'
-    - task: Npm@1
-      displayName: 'Run npm install'
-      inputs:
-        verbose: false
+- script: dotnet restore
+  displayName: 'Restore dependencies'
 
-    - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt' 
-      displayName: 'Write build info'
-      #workingDirectory: $(wwwrootDir)
-      
+- script: dotnet build --configuration Release --no-restore
+  displayName: 'Build solution'
 
-    - task: VSTest@1
-      inputs:
-        platform: '$(buildPlatform)'
-        configuration: '$(buildConfiguration)'
-        codeCoverageEnabled: true
-    - task: PublishBuildArtifacts@1
-      inputs:
-       PathtoPublish: '$(Build.ArtifactStage)'
-       ArtifactName: 'drop'
-       publishLocation: FilePath 
-       MaxArtifactSize: 0
+- script: dotnet test --no-build --verbosity normal
+  displayName: 'Run unit tests'
 
-    - task: DotNetCoreCLI@2
-      inputs:
-       command: 'test'
-       projects: '**/*.csproj'
-       arguments: 'output folder'
-       testRunTitle: 'app test result'
-       workingDirectory: '$(System.DefaultWorkingDirectory)'
-   
-    - task: ArchiveFiles@2
-      inputs:
-       rootFolderOrFile: '$(Build.BinariesDirectory)'
-       includeRootFolder: true
-       archiveType: 'zip'
-       archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-       replaceExistingArchive: true
+- task: CopyFiles@2
+  inputs:
+    contents: '**/bin/Release/**'
+    targetFolder: '$(Build.ArtifactStagingDirectory)'
+  displayName: 'Copy build artifacts'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+
