--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,71 +1,63 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
+# Trigger pipeline on any branch push
 trigger:
   branches:
     include:
       - '*'
 
-pool:
-  vmImage: 'ubuntu-latest'
-variables:
-  buildConfiguration: 'Dev'
-  releaseBranchName: 'dev'
-  dotnetSdkVersion: '6.x'
-
+# Define pipeline
 stages:
-- stage: 'Build'
-  displayName: 'Build the web application'
-  jobs: 
-  - job: 'Build'
-    displayName: 'Build job'
-    pool:
-      vmImage: 'ubuntu-20.04'
-      demands:
-      - npm 
-      
-    steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET SDK $(dotnetSdkVersion)'
-      inputs:
-        version: '$(dotnetSdkVersion)'
-    - task: Npm@1
-      displayName: 'Install Dependencies'
-      inputs:
-       command: 'install'
-    - task: Npm@1
-      displayName: 'Run npm install'
-      inputs:
-        verbose: false
-- stage: 'UnitTest'
-  displayName: 'Test the code'
-  jobs: 
-  - job: 'test'
-    displayName: 'Test job'
-    steps:
-      - task: UseDotNet@2
-        inputs:
-         packageType: 'sdk'
-         version: '6.x' # specify the .NET version you're using
+  # Build Stage
+  - stage: Build
+    displayName: 'Build Stage'
+    jobs:
+      - job: Compile
+        displayName: 'Compile Job'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: UseDotNet@2
+            inputs:
+              packageType: 'sdk'
+              version: '6.x' # Specify your .NET version
 
-      - script: dotnet build --configuration Release --no-restore
-        displayName: 'Build solution'
+          - script: dotnet restore
+            displayName: 'Restore dependencies'
 
-      - script: dotnet test --no-build --verbosity normal
-        displayName: 'Run unit tests'
+          - script: dotnet build --configuration Release --no-restore
+            displayName: 'Build solution'
+  
+  # Test Stage
+  - stage: Test
+    displayName: 'Test Stage'
+    dependsOn: Build
+    jobs:
+      - job: UnitTests
+        displayName: 'Run Unit Tests'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - script: dotnet test --no-build --verbosity normal
+            displayName: 'Run unit tests'
 
-      - task: CopyFiles@2
-        inputs:
-          contents: '**/bin/Release/**'
-          targetFolder: '$(Build.ArtifactStagingDirectory)'
-        displayName: 'Copy build artifacts'
+  # Packaging Stage
+  - stage: Package
+    displayName: 'Packaging Stage'
+    dependsOn: Test
+    jobs:
+      - job: Package
+        displayName: 'Package Job'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: CopyFiles@2
+            inputs:
+              contents: '**/bin/Release/**'
+              targetFolder: '$(Build.ArtifactStagingDirectory)'
+            displayName: 'Copy build artifacts'
 
-      - task: PublishBuildArtifacts@1
-        inputs:
-         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-         ArtifactName: 'drop'
-         publishLocation: 'Container'
-
-
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
+            displayName: 'Publish artifacts'
