--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,35 @@ trigger:
 
 # Define pipeline
 stages:
+  
+  - stage: 'InstallDependecies'
+    displayName: 'Build the web application'
+    jobs: 
+    - job: 'Build'
+      displayName: 'Build job'
+      pool:
+       vmImage: 'ubuntu-20.04'
+       demands:
+       - npm 
+      
+      steps:
+      - task: UseDotNet@2
+        displayName: 'Use .NET SDK $(dotnetSdkVersion)'
+        inputs:
+         version: '$(dotnetSdkVersion)'
+      - task: Npm@1
+        displayName: 'Install Dependencies'
+        inputs:
+         command: 'install'
+      - task: Npm@1
+        displayName: 'Run npm install'
+        inputs:
+         verbose: false
+      - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt' 
+        displayName: 'Write build info'
+
   # Build Stage
-  - stage: Build
+  - stage: 'Build'
     displayName: 'Build Stage'
     jobs:
       - job: Compile
@@ -19,9 +46,6 @@ stages:
             inputs:
               packageType: 'sdk'
               version: '6.x' # Specify your .NET version
-
-          - script: dotnet restore
-            displayName: 'Restore dependencies'
 
           - script: dotnet build --configuration Release --no-restore
             displayName: 'Build solution'
