--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
            verbose: false
         - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt' 
           displayName: 'Write build info'
-          workingDirectory: $(wwwrootDir)
+          workingDirectory: $(System.DefaultWorkingDirectory)
         - task: UseDotNet@2
           inputs: 
            version: '6.x' #Specigy .NET Version
@@ -56,6 +56,7 @@ stages:
         
         - script: dotnet restore
           displayName: 'Dependencies restore'
+          
         - script: dotnet build --configuration Release --no-restore
           displayName: 'Build Solution'
   
