--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,13 +54,12 @@ stages:
            version: '6.x' #Specigy .NET Version
            packageType: sdk
         
-        - script: dotnet restore
-          workingDirectory: $(Agent.BuildDirectory)
-          displayName: 'Dependencies restore'
+        #- script: dotnet restore
+       ##  displayName: 'Dependencies restore'
           
-        - script: dotnet build --configuration Release --no-restore
-          workingDirectory: $(Agent.BuildDirectory)
-          displayName: 'Build Solution'
+      #  - script: dotnet build --configuration Release --no-restore
+       #   workingDirectory: $(Agent.BuildDirectory)
+        #  displayName: 'Build Solution'
   
   # Test Stage
   - stage: Test
