--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
         - task: Npm@1
           displayName: 'Run npm install'
           inputs:
-           verbose: false
+           verbose: true
         - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt' 
           displayName: 'Write build info'
           workingDirectory: $(System.DefaultWorkingDirectory)
