Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ stages:
         - task: UseDotNet@2
           inputs: 
            version: '6.x' #Specigy .NET Version
-           packageType: sdk
+           packageType: runtime
         
         #- script: dotnet restore
        ##  displayName: 'Dependencies restore'
