Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ stages:
 
   # Test Stage
   - stage: Test
-    displayName: 'Test Stage'
+    displayName: 'Unit Test Stage'
     dependsOn: Build
     jobs:
       - job: UnitTests
