--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,9 +60,15 @@ stages:
         pool:
           vmImage: 'ubuntu-latest'
         steps:
+          - script: dotnet restore
+            displayName: 'Restore dependencies'
+
+          - script: dotnet build --configuration Release --no-restore
+            displayName: 'Build solution'
+
           - script: dotnet test --no-build --verbosity normal
             displayName: 'Run unit tests'
-            workingDirectory: #
+          
 
   # Packaging Stage
   - stage: Package
