--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,17 +3,21 @@ trigger:
   branches:
     include:
       - '*'
+pr:
+  branches:
+    include:
+      - develop
 variables: 
   dotnetSdkVersion: '6.x'
   buildConfiguration: 'Release'
   releaseBranchName: 'release'
   
-# Define pipeline
+ # Build Stage
 stages:
-  - stage: 'InstallDependecies'
-    displayName: 'Install dependencies the web application'
+  - stage: 'Build'
+    displayName: 'Build Stage'
     jobs: 
-    - job: 'install'
+    - job: 'build'
       displayName: 'Build job'
       pool:
        vmImage: 'ubuntu-20.04'
@@ -22,29 +26,24 @@ stages:
         inputs:
          versionSpec: '14.x'  # Node version
         displayName: 'Install Node.js'
- 
+      - script: npm install
+        displayName: 'Install Dependencies'
 
-  # Build Stage
-  - stage: 'Build'
-    displayName: 'Build Stage'
-    jobs:
-      - job: Build
-        displayName: 'Compile Job'
-        pool:
-          vmImage: 'ubuntu-latest'
-          demands:
-          - npm 
-      - job: SecurityScan
-        dependsOn: Build
-        condition: succeeded()
-        pool:
-         vmImage: ubuntu-latest
+      - script: npm run build
+        displayName: 'Build Application'
+
+  
+    - job: SecurityScan
+      dependsOn: Build
+      condition: succeeded()
+      pool:
+        vmImage: ubuntu-latest
         steps:
         - task: UseDotNet@2
           displayName: 'Use .NET SDK $(dotnetSdkVersion)'
           inputs:
            version: '$(dotnetSdkVersion)'
-      - job: Test
+        - job: Test
         dependsOn: SecurityScan  # Run tests after build completes
         condition: succeeded()  # Only run tests if build succeeds
         pool:
@@ -68,8 +67,8 @@ stages:
 
         - task: PublishBuildArtifacts@1
           inputs:
-            PathtoPublish: 'dist'
-            ArtifactName: 'drop'
+            PathtoPublish: 'artifacts'
+            ArtifactName: 'Artifact'
             publishLocation: 'Container'
           displayName: 'Publish Build Artifacts'
 
