Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ stages:
 
   
     - job: SecurityScan
+      displayName: Securityscan
       dependsOn: Build
       condition: succeeded()
       pool:
