--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,6 +91,7 @@ stages:
             inputs:
               PathtoPublish: '$(Build.ArtifactStagingDirectory)'
               ArtifactName: 'drop'
-              publishLocation: 'Container'
+              publishLocation: FilePath 
+              TargetPath: '$(Build.ArtifactStagingDirectory)'
             displayName: 'Publish artifacts'
 
