--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,7 +91,7 @@ stages:
             inputs:
               PathtoPublish: '$(Build.ArtifactStagingDirectory)'
               ArtifactName: 'drop'
-              publishLocation: FilePath 
-              TargetPath: '$(Build.ArtifactStagingDirectory)'
+              publishLocation: Container
+             
             displayName: 'Publish artifacts'
 
