--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,48 +3,50 @@ trigger:
   branches:
     include:
       - '*'
+pr:
+  branches:
+    include:
+      - develop
 variables: 
   dotnetSdkVersion: '6.x'
   buildConfiguration: 'Release'
   releaseBranchName: 'release'
   
-# Define pipeline
+ # Build Stage
 stages:
-  - stage: 'InstallDependecies'
-    displayName: 'Install dependencies the web application'
+  - stage: 'Build'
+    displayName: 'Build Stage'
     jobs: 
-    - job: 'install'
+    - job: 'build'
       displayName: 'Build job'
       pool:
        vmImage: 'ubuntu-20.04'
       steps:
       - task: NodeTool@0
         inputs:
-         versionSpec: '20.13.0'  # Node version
+         versionSpec: '14.x'  # Node version
         displayName: 'Install Node.js'
- 
+      - script: npm install
+        displayName: 'Install Dependencies'
 
-  # Build Stage
-  - stage: 'Build'
-    displayName: 'Build Stage'
-    jobs:
-      - job: Build
-        displayName: 'Compile Job'
-        pool:
-          vmImage: 'ubuntu-latest'
-          demands:
-          - npm 
-      - job: SecurityScan
-        dependsOn: Build
-        condition: succeeded()
-        pool:
-         vmImage: ubuntu-latest
+      - script: npm build
+        displayName: 'Build Application'
+      - script: npm test
+        displayName: 'Run Unit Tests'
+
+  
+    - job: SecurityScan
+      displayName: Securityscan
+      dependsOn: Build
+      condition: succeeded()
+      pool:
+        vmImage: ubuntu-latest
         steps:
         - task: UseDotNet@2
           displayName: 'Use .NET SDK $(dotnetSdkVersion)'
           inputs:
            version: '$(dotnetSdkVersion)'
-      - job: Test
+        - job: Test
         dependsOn: SecurityScan  # Run tests after build completes
         condition: succeeded()  # Only run tests if build succeeds
         pool:
@@ -57,17 +59,16 @@ stages:
     jobs:
       - job: UnitTests
         displayName: 'Run Unit Tests'
-        pool:
-          vmImage: 'ubuntu-latest'
         steps:
-          - script: dotnet restore
-            displayName: 'Restore dependencies'
+        - task: PublishTestResults@2
+          inputs:
+            testResultsFormat: 'JUnit'
+            testResultsFiles: '**/test-results.xml'
+          displayName: 'Publish Test Results'
+        
 
-          - script: dotnet build --configuration Release --no-restore
-            displayName: 'Build solution'
+        
 
-          - script: dotnet test --no-build --verbosity normal
-            displayName: 'Run unit tests'
           
 
   # Packaging Stage
@@ -90,6 +91,7 @@ stages:
             inputs:
               PathtoPublish: '$(Build.ArtifactStagingDirectory)'
               ArtifactName: 'drop'
-              publishLocation: 'Container'
+              publishLocation: Container
+             
             displayName: 'Publish artifacts'
-    
+
