--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,8 @@ stages:
         displayName: 'Run Unit Tests'
 
   
-    - job: SecurityScan
-      displayName: Securityscan
+    - job: SnykScan
+      displayName: SnykScan
       dependsOn: Build
       condition: succeeded()
       pool:
