--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
     - job: TestJob
       displayName: 'Unit Tests'
       steps:
-       - script: dotnet test --configuration Release --no-build --collect:"XPlat Code Coverage"
+       - script: npm test
          displayName: 'Run Unit Tests'
 
   - stage: CodeReview
