--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,16 +13,20 @@ stages:
   jobs:
   - job: Build
     displayName: 'Build the project'
-    steps:
-    - task: UseDotNet@2
-      inputs:
-        packageType: 'sdk'
-        version: '5.x' # Replace with the appropriate .NET SDK version
-        installationPath: $(Agent.ToolsDirectory)/dotnet
-
-    - script: dotnet build --configuration Release
-      displayName: 'Build the project'
-
+    pool:
+       vmImage: 'ubuntu-20.04'
+       steps:
+       - task: NodeTool@0
+         inputs:
+         versionSpec: '14.x'  # Node version
+         displayName: 'Install Node.js'
+       - script: npm install
+         displayName: 'Install Dependencies'
+       - script: npm build
+         displayName: 'Build Application'
+       - script: npm test
+         displayName: 'Run Unit Tests'
+  
   - job: SnykScan
     displayName: 'Snyk Security Scan'
     dependsOn: Build
