Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,10 @@ stages:
         checkLatest: true
 
     - script: |
-         npm install
+         npm install set fund false
          set cache .npm
          ci
+         audit fix
       displayName: 'Install Dependencies'
     
     - script: npm i sharp
