--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,8 @@ stages:
     steps:
     - script: |
         echo "Running Snyk security scan"
-        npm install -g snyk set fund false 
+        npm install -g snyk 
+        npm config set fund false
         snyk auth $SNYK_AUTH_TOKEN
         snyk test --severity-threshold=high --json > snyk-results.json
       displayName: 'Run Snyk Scan'
